# opengl_tutorial

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean_build.sh
src/: glad.c  main.cpp  part1.cpp  part1.h  part2.cpp  part2.h  shader.cpp  shader.h  utils.cpp  utils.h
src/shaders/: basic.fs.glsl  basic.vs.glsl  part2_basic.fs.glsl  part2_basic.vs.glsl
